# LiverAIforUEVR

./: .gitignore  README.md
AISegInference/: liver_ai_backend.py  liver_analysis_gui.py  multiliver_training.py  multiliver_training_fortumor.py  output_inference.py  pyproject.toml
AISegInference/liver_model/logs/: events.out.tfevents.1758498334.XiangQi.4444.0  events.out.tfevents.1758499009.XiangQi.6268.0
Plugins/LiverImageAI/: .gitignore  LiverImageAI.uplugin
Plugins/LiverImageAI/Source/LiverImageAI/: LiverImageAI.Build.cs
Plugins/LiverImageAI/Source/LiverImageAI/Private/: LiverAIHttpClient.cpp  LiverAITypes.cpp  LiverImageAI.cpp  SLiverSliceViewer.cpp
Plugins/LiverImageAI/Source/LiverImageAI/Private/Rendering/: VisualizationService.cpp
Plugins/LiverImageAI/Source/LiverImageAI/Private/Services/: AnalysisService.cpp  FileService.cpp  HttpService.cpp  ServerConnectionService.cpp
Plugins/LiverImageAI/Source/LiverImageAI/Private/UI/: DiagnosticReportWidget.cpp  FileSelectionWidget.cpp  MainAnalysisWidget.cpp  ProgressWidget.cpp  SliceViewerWidget.cpp
Plugins/LiverImageAI/Source/LiverImageAI/Private/Utils/: ImageDataProcessor.cpp  JsonParser.cpp  ProgressMonitor.cpp
Plugins/LiverImageAI/Source/LiverImageAI/Public/: LiverAIHttpClient.h  LiverAITypes.h  LiverImageAI.h  SLiverSliceViewer.h
Plugins/LiverImageAI/Source/LiverImageAI/Public/Interfaces/: IAnalysisService.h  IFileService.h  IHttpService.h  IProgressMonitor.h  IServerConnectionService.h  ISliceViewerService.h  IVisualizationService.h
(+20 files in other folders)
