[project]
name = "liver_ai"
version = "0.1.0"
description = "Liver segmentation & classification with MONAI + PyTorch, plus a PySide6 GUI"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
  "numpy>=2.3,<3",
  "scipy>=1.16",
  "packaging>=24.0",
  "monai-weekly>=1.6.dev0",
  "nibabel>=5.3",
  "matplotlib>=3.10",
  "PySide6>=6.9",
  "tensorboard>=2.20",
  "scikit-image>=0.25",
  "torch==2.8.0+cu128",
  "torchvision==0.23.0+cu128",
  "markupsafe==2.1.5",
  "tqdm>=4.67.1",
  "simpleitk>=2.5.2",
  "opencv-python>=4.11.0.86",
  "trimesh>=4.8.1",
  "scikit-learn>=1.7.2",
  "rtree>=1.4.1",
  "fastapi>=0.116.2",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.9",
  "requests>=2.32.5",
  "vtk>=9.5.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"